--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-31  Daiki Ueno  <ueno@gnu.org>
+
+	* msgfilter.texi: Document the environment variable
+	MSGFILTER_PREV_MSGCTXT, MSGFILTER_PREV_MSGID, and
+	MSGFILTER_PREV_MSGID_PLURAL.
+
 2014-05-15  Stanislav Brabec  <sbrabec@suse.cz>  (tiny change)
 
 	* msgfilter.texi: Document the environment variable
