--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2014-05-31  Daiki Ueno  <ueno@gnu.org>
+
+	msgfilter: Pass previous msgid to the child process
+	Suggested by Pavel Kharitonov in:
+	<http://lists.gnu.org/archive/html/bug-gettext/2014-05/msg00022.html>.
+	* msgfilter.c (process_message): Set MSGFILTER_PREV_* envvar.
+
 2014-05-19  Daiki Ueno  <ueno@gnu.org>
 
 	* Makefile.am (po-gram-gen2.h): Adjust the directory to which
