--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2014-05-31  Daiki Ueno  <ueno@gnu.org>
+
+	* msgfilter-6: Test MSGFILTER_PREV_MSGID and
+	MSGFILTER_PREV_MSGID_PLURAL.
+
 2014-05-15  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Add test for msgfilter plural handling
