msgexec: Pass previous msgid to the child process
Suggested by Pavel Kharitonov in:
<http://lists.gnu.org/archive/html/bug-gettext/2014-05/msg00022.html>.
* msgexec.c (process_string): Set MSGEXEC_PREV_* envvar.

--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,5 +1,11 @@
 2014-05-31  Daiki Ueno  <ueno@gnu.org>
 
+	* msgexec.texi: Document the environment variable
+	MSGEXEC_PREV_MSGCTXT, MSGEXEC_PREV_MSGID, and
+	MSGEXEC_PREV_MSGID_PLURAL.
+
+2014-05-31  Daiki Ueno  <ueno@gnu.org>
+
 	* msgfilter.texi: Document the environment variable
 	MSGFILTER_PREV_MSGCTXT, MSGFILTER_PREV_MSGID, and
 	MSGFILTER_PREV_MSGID_PLURAL.
