--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,12 @@
 2014-05-31  Daiki Ueno  <ueno@gnu.org>
 
+	msgexec: Pass previous msgid to the child process
+	Suggested by Pavel Kharitonov in:
+	<http://lists.gnu.org/archive/html/bug-gettext/2014-05/msg00022.html>.
+	* msgexec.c (process_string): Set MSGEXEC_PREV_* envvar.
+
+2014-05-31  Daiki Ueno  <ueno@gnu.org>
+
 	msgfilter: Pass previous msgid to the child process
 	Suggested by Pavel Kharitonov in:
 	<http://lists.gnu.org/archive/html/bug-gettext/2014-05/msg00022.html>.
