--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,9 @@
 2014-05-31  Daiki Ueno  <ueno@gnu.org>
 
+	* msgexec-5: Test MSGEXEC_PREV_MSGID and MSGEXEC_PREV_MSGID_PLURAL.
+
+2014-05-31  Daiki Ueno  <ueno@gnu.org>
+
 	* msgfilter-6: Test MSGFILTER_PREV_MSGID and
 	MSGFILTER_PREV_MSGID_PLURAL.
 
