--- a/gettext-runtime/man/ChangeLog
+++ b/gettext-runtime/man/ChangeLog
@@ -1,3 +1,8 @@
+2014-06-01  Daiki Ueno  <ueno@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add $(man_HTML3) so not to regenerate
+	them on make distcheck.
+
 2014-05-19  Daiki Ueno  <ueno@gnu.org>
 
 	build: Simplify man and HTML documentation generation
