--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,12 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	build: Handle 'environ' global variable differently on cygwin x86_64
+	Problem reported by Vasyl Khalak in:
+	<https://cygwin.com/ml/cygwin/2013-06/msg00228.html>.
+	* lib/execute.c.diff: New file.
+	* lib/spawn-pipe.c.diff: Likewise.
+	* Makefile.am (EXTRA_DIST): Add new patches.
+
 2014-05-14  Daiki Ueno  <ueno@gnu.org>
 
 	Update after gnulib changed.
