--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-06-01  Daiki Ueno  <ueno@gnu.org>
 
 	* ISO_639: Remove Moldavian. Update Bihari, Bengali, Catalan,
