--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-05-04  Jehan  <jehan@girinstud.io>  (tiny change)
 
 	configure: require automake >= 1.13
