--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-05-14  Daiki Ueno  <ueno@gnu.org>
 
 	* configure.ac: Adjust $docdir assuming that AC_PACKAGE_TARNAME is
