--- a/gettext-runtime/man/ChangeLog
+++ b/gettext-runtime/man/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-06-01  Daiki Ueno  <ueno@gnu.org>
 
 	* Makefile.am (EXTRA_DIST): Add $(man_HTML3) so not to regenerate
