--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-05-02  Daiki Ueno  <ueno@gnu.org>
 
 	Makefile.in.in: Turn {POFILES,DISTFILES}DEPS into yes/no options
