--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-04-22  Roumen Petrov  <bugtrack@roumenpetrov.info>  (tiny change)
 
 	build: Use Automake 'subdir-objects' option
