--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2013-12-17  Daiki Ueno  <ueno@gnu.org>
 
 	Add missing extern-inline.m4 into archive.
