--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-04-21  Daiki Ueno  <ueno@gnu.org>
 
 	* Rules-quot: Use built-in filter if possible.
