--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19 released.
+
 2014-05-31  Daiki Ueno  <ueno@gnu.org>
 
 	msgexec: Pass previous msgid to the child process
