--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,5 +1,13 @@
 2014-06-02  Daiki Ueno  <ueno@gnu.org>
 
+	po: Sync gettext-tools/po/Makevars with gettext-runtime/po/Makevars
+	* Makevars (PACKAGE_GNU, PO_DEPENDS_ON_POT)
+	(DIST_DEPENDS_ON_UPDATE_PO): New variables.
+	* Makevars.template (PACKAGE_GNU, PO_DEPENDS_ON_POT)
+	(DIST_DEPENDS_ON_UPDATE_PO): New variables.
+
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
 	* gettext 0.19 released.
 
 2014-04-21  Daiki Ueno  <ueno@gnu.org>
