--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,9 @@
 2014-06-02  Daiki Ueno  <ueno@gnu.org>
 
+	* msgfmt-10: Update after error checking behaviro change.
+
+2014-06-02  Daiki Ueno  <ueno@gnu.org>
+
 	* gettext 0.19 released.
 
 2014-05-31  Daiki Ueno  <ueno@gnu.org>
