--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-06-04  Jim Meyering  <meyering@fb.com>  (tiny change)
+
+	configure: also distribute xz-compressed tarballs
+	* configure.ac (AM_INIT_AUTOMAKE): Add dist-xz, so that xz-compressed
+	.tar.xz tarballs will be distributed alongside .tar.gz ones.
+
 2014-06-02  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19 released.
