--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-06-06  Daiki Ueno  <ueno@gnu.org>
+
+	autogen.sh: Use xz-compressed archive tarball
+	* autogen.sh: Fetch archive.dir-latest.tar.xz instead of .tar.gz.
+
 2014-06-04  Jim Meyering  <meyering@fb.com>  (tiny change)
 
 	configure: also distribute xz-compressed tarballs
