--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2014-06-07  Daiki Ueno  <ueno@gnu.org>
+
+	xgettext: Fix misrecognition of character literals in C and Vala
+	Problem reported by Paul Eggert at
+	<http://lists.gnu.org/archive/html/bug-gettext/2014-06/msg00015.html>.
+	* x-c.c (phase5_get): Make sure to skip contents of character constant.
+	* x-vala.c (phase3_get): Likewise.
+
 2014-06-03  Daiki Ueno  <ueno@gnu.org>
 
 	desktop: Use logical filename as msgid location
