--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2014-06-09  Daiki Ueno  <ueno@gnu.org>
+
+	msgmerge: Disable --color option in --update mode
+	Suggested by 林Ｖ字龍 at:
+	<https://lists.gnu.org/archive/html/bug-gettext/2014-06/msg00017.html>.
+	* msgmerge.c (main): Error out when --color and --update are
+	specified at the same time.
+
 2014-06-07  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: Fix misrecognition of character literals in C and Vala
