--- a/gettext-tools/examples/po/es.po
+++ b/gettext-tools/examples/po/es.po
@@ -9,6 +9,7 @@ msgstr ""
 "PO-Revision-Date: 2004-01-29 13:59-0600\n"
 "Last-Translator: Max de Mendizábal <max@upn.mx>\n"
 "Language-Team: Spanish <es@li.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
