--- a/gettext-tools/po/da.po
+++ b/gettext-tools/po/da.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2011-01-10 23:48+0100\n"
 "Last-Translator: Keld Simonsen <keld@keldix.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
