--- a/gettext-runtime/po/da.po
+++ b/gettext-runtime/po/da.po
@@ -15,6 +15,7 @@ msgstr ""
 "PO-Revision-Date: 2011-01-08 01:45+0100\n"
 "Last-Translator: Keld Simonsen <keld@keldix.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
