--- a/gettext-runtime/po/fr.po
+++ b/gettext-runtime/po/fr.po
@@ -14,6 +14,7 @@ msgstr ""
 "PO-Revision-Date: 2010-07-23 01:20+0100\n"
 "Last-Translator: Christophe Combelles <ccomb@free.fr>\n"
 "Language-Team: French <traduc@traduc.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
