--- a/gettext-runtime/po/ga.po
+++ b/gettext-runtime/po/ga.po
@@ -10,6 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2007-10-14 12:15-0500\n"
 "Last-Translator: Kevin Patrick Scannell <kscanne@gmail.com>\n"
 "Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
+"Language: ga\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
