--- a/gettext-runtime/po/nb.po
+++ b/gettext-runtime/po/nb.po
@@ -10,6 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2001-05-09 02:08+02:00\n"
 "Last-Translator: Trond Endrestøl <endrestol@hotmail.com>\n"
 "Language-Team: Norwegian-bokmål <no@li.org>\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
