--- a/gettext-runtime/po/pt.po
+++ b/gettext-runtime/po/pt.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2007-12-09 18:24+0100\n"
 "Last-Translator: Helder Correia <helder.pereira.correia@gmail.com>\n"
 "Language-Team: Portuguese <translation-team-pt@lists.sourceforge.net>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
