--- a/gettext-runtime/po/zh_CN.po
+++ b/gettext-runtime/po/zh_CN.po
@@ -16,6 +16,7 @@ msgstr ""
 "PO-Revision-Date: 2010-07-11 15:29+0800\n"
 "Last-Translator: Aron Xu <happyaron.xu@gmail.com>\n"
 "Language-Team: Chinese (simplified) <i18n-zh@googlegroups.com>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
