--- a/gettext-runtime/po/zh_HK.po
+++ b/gettext-runtime/po/zh_HK.po
@@ -14,6 +14,7 @@ msgstr ""
 "PO-Revision-Date: 2006-07-05 17:16+0800\n"
 "Last-Translator: Abel Cheung <abelcheung@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
+"Language: zh_HK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
