--- a/gettext-tools/examples/po/ast.po
+++ b/gettext-tools/examples/po/ast.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-12-15 12:16+0100\n"
 "Last-Translator: Marquinos <maacub@gmail.com>\n"
 "Language-Team: Asturian <ubuntu-l10n-ast@lists.ubuntu.com>\n"
+"Language: ast\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
