--- a/gettext-tools/examples/po/da.po
+++ b/gettext-tools/examples/po/da.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2011-01-08 12:39+0100\n"
 "Last-Translator: Keld Simonsen <keld@keldix.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
