--- a/gettext-tools/examples/po/mt.po
+++ b/gettext-tools/examples/po/mt.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2008-11-18 17:27+0100\n"
 "Last-Translator: Clyde Meli <cmeli@cis.um.edu.mt>\n"
 "Language-Team: Maltese <translation-team-mt@lists.sourceforge.net>\n"
+"Language: mt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-3\n"
 "Content-Transfer-Encoding: 8bit\n"
