--- a/gettext-tools/po/cs.po
+++ b/gettext-tools/po/cs.po
@@ -16,6 +16,7 @@ msgstr ""
 "PO-Revision-Date: 2001-08-18 15:22+0200\n"
 "Last-Translator: Vladimir Michl <Vladimir.Michl@seznam.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
