--- a/gettext-tools/po/eu.po
+++ b/gettext-tools/po/eu.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2007-08-31 11:36+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Basque <translation-team-eu@lists.sourceforge.net>\n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
