--- a/gettext-tools/po/nn.po
+++ b/gettext-tools/po/nn.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2009-06-17 22:37+0200\n"
 "Last-Translator: Eirik U. Birkeland <eirbir@gmail.com>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
+"Language: nn\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
