--- a/gettext-runtime/doc/ChangeLog
+++ b/gettext-runtime/doc/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.1 released.
+
 2014-06-06  Daiki Ueno  <ueno@gnu.org>
 
 	doc: Update the matrix
