--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.1 released.
+
 2014-06-02  Daiki Ueno  <ueno@gnu.org>
 
 	po: Sync gettext-tools/po/Makevars with gettext-runtime/po/Makevars
