--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.1 released.
+
 2014-06-09  Daiki Ueno  <ueno@gnu.org>
 
 	msgmerge: Disable --color option in --update mode
