--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.1 released.
+
 2014-06-03  Daiki Ueno  <ueno@gnu.org>
 
 	build: Handle 'environ' global variable differently on cygwin x86_64
