--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,10 @@
+2014-06-16  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Test "make dist" in autopoint test
+	* autopoint-3: Run "make dist" after "make"; add a workaround for
+	a bug in 0.19 and 0.19.1, where intl/ChangeLog is required but
+	missing in the archive.
+
 2014-06-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.1 released.
