--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2014-07-11  Daiki Ueno  <ueno@gnu.org>
+
+	c: Fix empty string literal handling
+	Problem reported by Bernhard Voelker in:
+	<http://lists.gnu.org/archive/html/bug-gnulib/2014-07/msg00059.html>.
+	* x-c.c (phase5_get): Add missing memory allocation for empty
+	string literal.
+
 2014-06-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.1 released.
