autopoint: Select macro tracing method by Autoconf version Reported and analyzed by Pádraig Brady in: <http://lists.gnu.org/archive/html/bug-gnulib/2014-07/msg00071.html>.
* autopoint.in (func_trace_autoconf): Rename from func_trace.
($func_trace): Set to func_trace_autoconf if Autoconf >= 2.69 is
availabl, otherwise to func_trace_sed.
* gettextize.in: Likewise.

--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,13 @@
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
+	autopoint: Select macro tracing method by Autoconf version
+	Reported and analyzed by Pádraig Brady in:
+	<http://lists.gnu.org/archive/html/bug-gnulib/2014-07/msg00071.html>.
+	* autopoint.in (func_trace_autoconf): Rename from func_trace.
+	($func_trace): Set to func_trace_autoconf if Autoconf >= 2.69 is
+	availabl, otherwise to func_trace_sed.
+	* gettextize.in: Likewise.
+
 2014-06-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.1 released.
