--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,14 @@
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
+	build: Fix race in post-install removal of *.a
+	There was an implicit dependency between the prerequisites of
+	install-exec-local, which may have caused error with make -jN.
+	Use install-exec-hook to remove the dependency.
+	Reported by Christian Weisgerber in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2014-07/msg00008.html>.
+	* Makefile.am (install-exec-local): Remove.
+	(install-exec-hook): New rule, depend on install-exec-clean.
+
 2014-07-11  Daiki Ueno  <ueno@gnu.org>
 
 	c: Fix empty string literal handling
