--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.2 released.
+
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
 	build: Work around undefined _GL_ATTRIBUTE_PURE in libintl
 	* Makefile.am (distcheck-hook): Ignore the difference between our
 	localename.c and the latest Gnulib's, which utilizes
