--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.2 released.
+
 2014-06-12  Daiki Ueno  <ueno@gnu.org>
 
 	* gpl.texi, lgpl.texi, fdl.texi: Update from GNU.
