--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,9 @@
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.2 released.
+
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
 	autopoint: Fix the last change
 	* autopoint.in: Use func_trace_sed for AM_GNU_GETTEXT and
 	AM_GNU_GETTEXT_VERSION, as they are not an Autoconf trace.
