--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,9 @@
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.2 released.
+
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
 	vala: Fix empty string literal handling
 	Similar to the commit 7b2d8d61 on July 11.
 	* x-vala.c (phase3_get): Add missing memory allocation for empty
