--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,9 @@
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.2 released.
+
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
 	tests: Test empty literals in Vala test
 	* xgettext-vala-1: Test empty literals that do not affect the
 	following lines.
