--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,5 +1,9 @@
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.2 released.
+
+2014-07-14  Daiki Ueno  <ueno@gnu.org>
+
 	Update after gnulib changed.
 	* lib/execute.c.diff: Update.
 	* lib/spawn-pipe.c.diff: Update.
