--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,12 @@
+2014-07-16  Daiki Ueno  <ueno@gnu.org>
+
+	* localename.c: Update from Gnulib.
+	2014-07-10  Assaf Gordon  <assafgordon@gmail.com>
+            localename: avoid -Wsuggest-attribute={const,pure} warnings
+            * lib/localename.c (string_hash): Tag internal function as pure.
+	* xsize.c (XSIZE_INLINE): Remove _GL_UNUSED definition.  It will
+	be set through intl.m4.
+
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.2 released.
