--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2014-07-16  Daiki Ueno  <ueno@gnu.org>
+
+	* intl.m4 (gt_GL_ATTRIBUTE): New macro.
+	(AM_INTL_SUBDIR): Require gt_GL_ATTRIBUTE.
+
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.2 released.
