--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2014-09-01  Daiki Ueno  <ueno@gnu.org>
+
+	* convert-archive.in: Don't use non-portable 'if ! COMMAND'.
+	Reported by Stefano Lattarini in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2011-07/msg00002.html>.
+
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.2 released.
