--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-30  Daiki Ueno  <ueno@gnu.org>
+
+	* xgettext-c-19: Test octal string escape.
+
 2014-09-24  Daiki Ueno  <ueno@gnu.org>
 
 	* xgettext-c-19: Use iconv -f/-t instead of non-portable
