--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,9 @@
+2014-09-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* configure.ac: Invoke AM_PROG_CC_C_O so that the system stdbool.h
+	will be used on Solaris.  Suggested by Paul Eggert in:
+	<https://lists.gnu.org/archive/html/bug-gnulib/2013-11/msg00053.html>.
+
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.2 released.
