--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-30  Daiki Ueno  <ueno@gnu.org>
+
+	* extern-inline.m4, threadlib.m4: Update from Gnulib.
+
 2014-07-16  Daiki Ueno  <ueno@gnu.org>
 
 	* intl.m4 (gt_GL_ATTRIBUTE): New macro.
