--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Version 0.19.3 - unreleased
+
+* Bug fixes:
+  - Fix xgettext mishandling of octal character escapes in C.
+
+* Portability:
+  - Building on Solaris 10 and 11 with Solaris Studio compiler is now
+    fixed.
+
 Version 0.19.2 - July 2014
 
 * Bug fixes:
