--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2014-10-08  Daiki Ueno  <ueno@gnu.org>
+
+	* Makevars (MSGINIT_OPTIONS): New variable.
+	* Makevars.template (MSGINIT_OPTIONS): Likewise.
+
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.2 released.
