--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2014-10-10  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Add test for Debian bug#764580
+	* autopoint-2: Check if m4_assert is properly redefined while
+	tracing.
+
 2014-10-08  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Improve test coverage of C and Vala scanners
