--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,12 @@
+2014-10-12  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Avoid sed error on Mac OS X when dealing with binary input
+	Reported by Ramsey Dow in:
+	<http://lists.gnu.org/archive/html/bug-gettext/2014-07/msg00002.html>.
+	* msgmerge-compendium-6: Run sed with LC_ALL=C, to avoid 'illegal
+	byte sequence' error on Mac OS X.
+	* format-sh-1: Likewise.
+
 2014-10-10  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Add test for Debian bug#764580
