--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-po.in.h (LIBGETTEXTPO_VERSION): Bump to 0.19.3.
+
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.2 released.
