--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* autopoint-2 (required_gettext_version): Update to 0.19.3.
+	* autopoint-3 (required_gettext_version): Likewise.
+
 2014-10-12  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Avoid sed error on Mac OS X when dealing with binary input
