--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* es.po: Update.
+
 2014-10-08  Daiki Ueno  <ueno@gnu.org>
 
 	* Makevars (MSGINIT_OPTIONS): New variable.
