--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.3 released.
+
 2014-10-02  Daiki Ueno  <ueno@gnu.org>
 
 	* configure.ac: To automatically disable building libasprintf when
