--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.3 released.
+
 2014-09-30  Daiki Ueno  <ueno@gnu.org>
 
 	* vasnprintf.c: Update from Gnulib.
