--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.3 released.
+
 2014-09-30  Daiki Ueno  <ueno@gnu.org>
 
 	* extern-inline.m4, threadlib.m4: Update from Gnulib.
