--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.3 released.
+
 2014-10-08  Daiki Ueno  <ueno@gnu.org>
 
 	* Makevars (MSGINIT_OPTIONS): New variable.
