--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,5 +1,9 @@
 2014-10-15  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.3 released.
+
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
 	* po/eo.po, po/es.po, po/nb.po: Update.
 
 2014-07-14  Daiki Ueno  <ueno@gnu.org>
