--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,9 @@
 2014-10-15  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.3 released.
+
+2014-10-15  Daiki Ueno  <ueno@gnu.org>
+
 	* autopoint-2 (required_gettext_version): Update to 0.19.3.
 	* autopoint-3 (required_gettext_version): Likewise.
 
